chore: update nixos tooling and desktop config